PERSONAL_ACCESS_TOKEN

--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site  # Default MkDocs build directory
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Use your new PAT here
+          publish_dir: ./site
