--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ mkdocs-git-revision-date-localized-plugin==1.2.1
 mkdocs-glightbox==0.3.5
 autolink-references-mkdocs-plugin==0.2.1
 mkdocs-video==1.5.0
+mkdocs-awesome-pages-plugin==2.9.2
