--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,20 +47,21 @@ validation:
 theme:
   name: material
   palette:
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      primary: 'red'
-      accent: 'amber'
-      toggle:
-        icon: material/lightbulb
-        name: Switch to dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: 'red'
-      accent: 'amber'
-      toggle:
-        icon: material/lightbulb-outline
-        name: Switch to light mode
+    - scheme: default
+      primary: white
+      accent: teal
+    # media: "(prefers-color-scheme: light)"
+
+      # toggle:
+      #   icon: material/lightbulb
+      #   name: Switch to dark mode
+    # - media: "(prefers-color-scheme: dark)"
+    #   scheme: slate
+    #   primary: 'red'
+    #   accent: 'amber'
+    #   toggle:
+    #     icon: material/lightbulb-outline
+    #     name: Switch to light mode
   icon:
     annotation: material/information-variant-circle
     repo: fontawesome/brands/github
@@ -72,7 +73,7 @@ theme:
     - content.code.copy
     - content.code.annotate
     - content.code.select
-    - navigation.footer
+    - navigation.footer: false
     - navigation.indexes
     - navigation.instant
     - navigation.instant.progress
@@ -91,12 +92,13 @@ theme:
   font:
     text: Nunito
     code: Roboto Mono
-copyright: Made by Kris
+# copyright: Made by Kris
 extra:
   search:
     language: en
   status:
     wip: Work In Progress
+  generator: false
 
 markdown_extensions:
   - abbr
