--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - reference/measuring.md
     - reference/seasons.md
     - reference/temperatures.md
+    - reference/links.md
   - Recipe Template: template_recipe.md
   - Tags: tags.md
 
